# centripetal

./: .gitignore  .gitmodules  Cargo.toml  Rustfmt.toml  clean-incr
.cargo/: config.toml
.github/workflows/: build.yaml
macros/: Cargo.toml
macros/src/: lib.rs
src/: asset.rs  config.rs  control.rs  ecs.rs  i18n.rs  main.rs  progress.rs  save.rs
src/asset/: mod.rs  sprite_sheet.rs  sprites.rs
src/asset/ldtk/: loader.rs  mod.rs
src/control/: ground.rs  mod.rs
src/editor/: mod.rs
src/embedded_assets/shaders/: core.wgsl
src/entities/: hair.rs  mod.rs  selene.rs
src/entities/characters/: mod.rs  selene.rs
src/gfx/: material.rs  mod.rs
src/graphics/: animation.rs  color.rs  fbo.rs  mod.rs  pixelized_shape.wgsl  shape.rs  sprite_alloc.rs  sprite_drawer.rs  sprite_sheet.rs  sprites.rs
src/logic/: camera.rs  control.rs  ldtk.rs  level.rs  mod.rs  penumbra.rs  timed.rs
src/logic/effects/: basic.rs  mod.rs  ring.rs
src/logic/entities/: mod.rs
src/logic/entities/penumbra/: attractor.rs  generic.rs  launchable.rs  mod.rs  selene_penumbra.rs  thorn_pillar.rs  thorn_ring.rs
src/logic/entities/penumbra/bullet/: mod.rs  simple.rs  spiky.rs
src/logic/levels/: mod.rs  penumbra_wing_l.rs
src/logic/levels/penumbra_wing_l/: mod.rs  p1_spawn_attractor.rs  p2_spawn_selene.rs  p3_tutorial_align.rs  p4_tutorial_launch.rs  p5_tutorial_parry.rs  p6_tutorial_end.rs
src/math/: float.rs  mod.rs  rng.rs  time.rs  transform.rs  vector.rs
src/render/: attribute.rs  mod.rs
src/render/animation/: asset.rs  mod.rs  player.rs
src/render/atlas/: page.rs  region.rs
src/render/painter/: context.rs  mod.rs  pipeline.rs  vertex.rs
src/saves/: apply.rs  asset.rs  capture.rs  mod.rs  serde.rs
src/ui/: bottom_dialog.rs  dialog.rs  fade.rs  mod.rs  trans.rs  worldspace.rs
src/ui/widgets/: mod.rs  scroll_text.rs
src/util/: iter.rs  mod.rs
src/util/async_bridge/: command.rs  mod.rs
src/util/ecs/: bundle.rs  component.rs  mod.rs
src/world/: asset.rs  editor.rs  level.rs  level_collection.rs  mod.rs  tilemap.rs  tileset.rs
