[package]
name = "centripetal"
version = "0.1.0"
authors = ["GglLfr"]
edition = "2024"
rust-version = "1.88.0"

[dependencies]
async-channel = "2"
async-fs = "2"
bevy_asset_loader = { version = "0.23", features = ["progress_tracking"] }
bevy_ecs_tilemap = { version = "0.16", features = ["atlas"] }
bevy_framepace = "0.19"
bevy_vector_shapes = "0.10.0"
blocking = "1"
bytemuck = { version = "1", features = ["derive"] }
derive_more = { version = "2", features = ["error", "from", "display"] }
directories = "6"
fastrand = "2"
guillotiere = "0.6"
iyes_progress = { version = "0.14", features = ["assets", "async"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
mimalloc-redirect = "0.1"
num-traits = "0.2"
seldom_state = { version = "0.14", features = ["leafwing_input"] }
serde = { version = "1", features = ["derive"] }
serde_flexitos = "0.2"
serde_json = "1"
smallvec = { version = "1", features = ["const_generics", "union"] }
vec-belt = "1"

[dependencies.avian2d]
version = "0.3"
default-features = false
features = ["2d", "f32", "parry-f32", "debug-plugin", "parallel"]

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "std",
    "async_executor",
    "custom_cursor",
    "multi_threaded",
    "x11",
    "wayland",
    "png",
    "tonemapping_luts",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
]

[dependencies.leafwing-input-manager]
version = "0.17"
default-features = false
features = ["keyboard", "mouse", "picking"]

[features]
default = ["bevy_dynamic", "dev"]
bevy_dynamic = ["bevy/dynamic_linking"]
dev = ["bevy/track_location"]

[patch.crates-io]
avian2d = { git = "https://github.com/Jondolf/avian" }
