[package]
name = "centripetal"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["macros"]
resolver = "3"

[dependencies]
centripetal-macros = { version = "0.1.0", path = "macros" }

avian2d = { version = "0.4", default-features = false, features = [
    "2d",
    "bevy_picking",
    "default-collider",
    "f32",
    "parallel",
    "parry-f32",
    "xpbd_joints",
    "simd",
] }
bevy_framepace = "0.20"

async-channel = "2"
bincode = { version = "2", default-features = false, features = [
    "std",
    "serde",
] }
bitflags = "2"
bytemuck = { version = "1", features = ["derive", "latest_stable_rust"] }
directories = "6"
guillotiere = "0.6"
slab = "0.4"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1", features = [
    "const_generics",
    "const_new",
    "union",
] }
vec-belt = "1"

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "std",
    "async_executor",

    "bevy_core_pipeline",
    "bevy_log",
    "bevy_post_process",
    "bevy_state",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_winit",

    "custom_cursor",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "serialize",
    "sysinfo_plugin",
    "x11",
    "wayland",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc-redirect = "*"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tinyfiledialogs = "3"

[features]
default = ["dev"]
dev = [
    "bevy/debug",
    "bevy/experimental_bevy_feathers",
    "bevy/embedded_watcher",
    "bevy/file_watcher",
    "bevy/hotpatching",
    "bevy/track_location",
    "avian2d/debug-plugin",
]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[patch.crates-io]
erased-serde = { path = "vendor/erased-serde" }
